[tool.poetry]
name = "st-assistant-demo-personal"
version = "0.1.0"
description = ""
authors = ["kato-mahiro <kato.mahiro.3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
langchain-community = "^0.3.14"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
